Bug 1591736 - Fix AddonManagerWebAPI::IsAPIEnabled in out-of-process iframes r=mixedpuppy

Differential Revision: https://phabricator.services.mozilla.com/D50713