toolkit/mozapps/extensions/test/browser/browser_webapi_access.js
@@ -7,17 +7,11 @@ registerCleanupFunction(() => {
 });
 
 function check_frame_availability(browser) {
-  return ContentTask.spawn(browser, null, async function() {
-    let frame = content.document.getElementById("frame");
-    return (
-      frame.contentWindow.document.getElementById("result").textContent ==
-      "true"
-    );
-  });
+  return check_availability(browser.browsingContext.getChildren()[0]);
 }
 
 function check_availability(browser) {
-  return ContentTask.spawn(browser, null, async function() {
+  return SpecialPowers.spawn(browser, [], async function() {
     return content.document.getElementById("result").textContent == "true";
   });
 }
